--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,6 @@ jobs:
       matrix:
         os: [
           ubuntu-latest,
-          windows-latest
         ]
       fail-fast: false
 
@@ -48,7 +47,7 @@ jobs:
       - name: run test
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
-            ./Release/tests.exe
+            ./tests.exe
           else
             ./tests
           fi
