--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.16)
 project(main)
 
 add_executable(main main.cpp)
+add_executable(matho matho.cpp)
 
 install(TARGETS main)
 
